--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
+    "d:h": "firebase deploy --only hosting"
   },
   "dependencies": {
     "gatsby": "^2.9.11",
