--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "d:h": "firebase deploy --only hosting"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.10",
+    "@emotion/styled": "^10.0.12",
     "gatsby": "^2.9.11",
+    "gatsby-plugin-emotion": "^4.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
