--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@emotion/styled": "^10.0.12",
     "gatsby": "^2.9.11",
     "gatsby-plugin-emotion": "^4.1.0",
+    "gatsby-plugin-react-helmet": "^3.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
