--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   "dependencies": {
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.12",
+    "@types/react": "^16.8.22",
+    "@types/react-helmet": "^5.0.8",
     "gatsby": "^2.9.11",
     "gatsby-plugin-emotion": "^4.1.0",
     "gatsby-plugin-react-helmet": "^3.1.0",
+    "gatsby-plugin-typescript": "^2.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
